# data-engineering-fullstack-learning-path

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: roadmap.md
docs/guides/: README.md  git-workflow-quick-reference.md  homebrew-installation-setup.md  jupyter-notebook-run-commands.md  poetry-black-learning-track.md  python-env-and-kernel-setup.md  setup-verification.md  terminal-quick-reference.md  troubleshooting-common-errors.md
docs/tickets/: README.md
docs/tickets/milestones/m0/: README.md
docs/tickets/milestones/m0/week-01/: README.md  W1-D01-create-accounts.md  W1-D02-install-git-and-terminal-basics.md  W1-D03-install-python-and-virtualenv.md  W1-D04-install-editor-and-github-tools.md  W1-D05-clone-repo-and-run-first-python-command.md  W1-D06-basic-git-and-python-checks.md  W1-D07-first-branch-commit-and-pr.md
docs/tickets/milestones/m1/: README.md
docs/tickets/milestones/m1/week-01/: M1-D01-data-source-selection-and-scope.md  M1-D01-python-input-output-and-variables.md  M1-D02-lists-loops-and-conditionals.md  M1-D02-raw-data-download-and-storage-conventions.md  M1-D03-first-jupyter-notebook-setup.md  M1-D03-functions-and-small-reusable-code.md  M1-D04-exploratory-metrics-and-data-profiling.md  M1-D04-pathlib-and-local-files.md  M1-D05-data-quality-checks-v1.md  M1-D05-read-and-summarize-a-csv.md  M1-D06-insights-summary-and-data-dictionary-draft.md  M1-D06-mini-python-data-task.md  M1-D07-weekly-review-and-next-milestone-handoff.md  README.md  (+1 more)
docs/tickets/milestones/m2/: README.md
scripts/: sanity_check.py
(+64 files in other folders)
